# redis-derive

./: Cargo.toml  LICENSE  Makefile  readme.md
benches/: README.md  redis_derive_bench.rs
examples/: README.md  debug_attributes.rs  docker-compose.yml  enum_branches.rs  main.rs
src/: constants.rs  data_enum.rs  data_struct.rs  lib.rs  util.rs
tests/: README.md  error_cases.rs  integration_tests.rs  redis_integration.rs
