[package]
name = "redis-derive"
version = "0.1.7"
edition = "2021"
authors = ["Michael van Straten", "kkharji"]
repository = "https://github.com/kkharji/redis-derive"
documentation = "https://docs.rs/redis-derive/"
keywords = ["redis", "serde", "serialization"]
categories = ["encoding"]
readme = "readme.md"
description = "This crate implements the redis::FromRedisValue and redis::ToRedisArgs traits from mitsuhiko / redis-rs for any struct"
license = "MIT OR Apache-2.0"

[dependencies]
redis = "0.21.5"
quote = "1.0.10"
syn = { version = "1.0", features = ["extra-traits"] }
heck = "0.4.1"

[lib]
proc-macro = true
path = "src/lib.rs"
