[package]
name = "redis-derive"
version = "0.2.0"
edition = "2021"
authors = ["Michael van Straten", "kkharji"]
repository = "https://github.com/kkharji/redis-derive"
documentation = "https://docs.rs/redis-derive/"
keywords = ["redis", "serde", "serialization"]
categories = ["encoding"]
readme = "readme.md"
description = "This crate implements the redis::FromRedisValue and redis::ToRedisArgs traits from mitsuhiko / redis-rs for any struct"
license = "MIT OR Apache-2.0"

[dependencies]
# Redis client - minimum 0.32.4 for modern features
redis = "0.32.4"

# Procedural macro dependencies
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"

# String case conversion utilities
heck = "0.5"

[lib]
proc-macro = true
path = "src/lib.rs"


# Examples demonstrating redis-derive usage
[[example]]
name = "main"
path = "examples/main.rs"

[[example]]
name = "enum_branches"
path = "examples/enum_branches.rs"

[[example]]
name = "debug_attributes"
path = "examples/debug_attributes.rs"